# openpifpafwebdemo

./: .eslintrc.js  .gitattributes  .gitignore  .pylintrc  .travis.yml  LICENSE  MANIFEST.in  README.md  index.html  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py  test_image.json  tsconfig.json  webpack.config.cjs  webpack.config.js
.github/workflows/: deploy.yml  pypi-deploy.yml  tests.yml
docker/: Dockerfile  ingress.yml  readme.md  service_deployment.yml  service_deployment_echo.yml  ssl_secret.yml
docs/: colormap.py
js/src/: camera.ts  clientside.cts  clientside.ts  frontend.cts  frontend.ts  test.ts  visualization.ts
openpifpafwebdemo/: _version.py  analysis.js  base.html  client.html  index.html  processor.py  server.py  signal.py  web.py
openpifpafwebdemo/handlers/: __init__.py  feed.py  human_poses.py  index.py  key.py  render_template.py
openpifpafwebdemo/static/: style.css
openpifpafwebdemo/static/_static/: databench.css
static/: analysis.js  clientside.js  clientside.js.map  frontend.js  frontend.js.map  index.html  style.css
static/_static/: databench.js
